@@ -23,6 +23,18 @@ checkstyle {
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
+    jvmArgs '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+    options {
+        // Automatically answer 'yes' to any prompts
+        systemProperty 'org.gradle.internal.launcher.welcomeMessageEnabled', 'false'
+    }
+}
+
+task simulateInput(type: Exec) {
+    commandLine 'sh', '-c', 'echo y | ./gradlew test'
 }
 
 task coverage(type: JacocoReport) {
@@ -61,12 +73,21 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.7.4'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion
+    testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
+    testImplementation 'org.testfx:testfx-core:4.0.16-alpha'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.mockito:mockito-inline:4.0.0'
 
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
 }
 
 shadowJar {
-    archiveFileName = 'addressbook.jar'
+    archiveFileName = 'agentconnect.jar'
+}
+
+run {
+    enableAssertions = true
 }
 
 defaultTasks 'clean', 'test'
+
